Thu May  6 10:35:44 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * TAO_IDL/Makefile.am:
          Updated for all recent changes

Wed May  5 18:45:47 UTC 2010  Jeff Parsons <j.parsons@vanderbilt.edu>

        * TAO_IDL/be/be_codegen.cpp:
        * TAO_IDL/be/be_connector.cpp:
        * TAO_IDL/be/be_visitor_connector/connector_dds_exs.cpp:
        * TAO_IDL/be/be_visitor_connector/connector_dds_exh.cpp:
        * TAO_IDL/be/be_visitor_connector/connector_dds_ex_base.cpp:

          Changed connector impl generation to no longer skip the
          DDS_State and/or DDS_Event connectors that come with the
          instantiated template module, since we are going to remove
          the derived connector declaration from application IDL.

Wed May  5 13:26:09 UTC 2010  Jeff Parsons <j.parsons@vanderbilt.edu>

        * TAO_IDL/be/be_visitor_operation\operation.cpp:
        * TAO_IDL/be/be_visitor_operation\ami_cs.cpp:

          In a chain of insertions to TAO_OutStream, replaced calls
          to ACE_CString::c_str() and ACE_CString::length() with
          local variables, initialized outside the insertion chain.
          Some compilers apparently have trouble resolving the
          overloads. Also removed commented out code and made
          cosmetic changes.

Tue May  4 16:23:26 UTC 2010  Jeff Parsons <j.parsons@vanderbilt.edu>

        * TAO_IDL/be/be_visitor_interface/amh_si.cpp:
        * TAO_IDL/be/be_visitor_operation/proxy_impl_xh.cpp:
        * TAO_IDL/be/be_visitor_operation/direct_proxy_impl_ss.cpp:
        * TAO_IDL/be/be_visitor_operation/tie_sh.cpp:
        * TAO_IDL/be/be_visitor_operation/tie_ss.cpp:
        * TAO_IDL/be/be_visitor_valuetype/valuetype.cpp:
        * TAO_IDL/be/be_interface.cpp:

          Fixed several cases where sendc_* operations needed to be
          skipped on the skeleton side.

        * tests/IDL_Test/IDL_Test.mpc:

          Added empty inline and header file blocks on some projects